--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ build = "build.rs"
 
 [dependencies]
 futures = "0.3.25"
-libp2p = { version = "0.51.3", features = ["tcp", "noise", "relay", "yamux", "tokio", "macros", "kad", "identify"] }
+libp2p = { version = "0.51.3", features = ["tcp", "noise", "relay", "yamux", "tokio", "macros", "kad", "identify", "gossipsub"] }
 tokio = { version = "1.27.0", features = ["full"] }
